--- a/tiktok.html
+++ b/tiktok.html
@@ -6,59 +6,131 @@
     <title>Download TikTok</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #ff7e5f, #feb47b);
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: hidden;
         }
 
         .container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 90%;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            padding: 30px;
             text-align: center;
+            transition: all 0.3s ease;
         }
 
-        h1 {
+        h2 {
+            color: #333;
             margin-bottom: 20px;
+            font-size: 28px;
+            text-transform: uppercase;
+            background: -webkit-linear-gradient(#ff512f, #dd2476);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
-        input[type="text"] {
-            width: 80%;
-            padding: 10px;
+        label {
+            font-weight: bold;
             margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            display: block;
+            color: #555;
+            text-align: left;
+        }
+
+        input[type="text"], textarea {
+            width: 100%;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 2px solid transparent;
+            background-color: #f0f0f0;
+            box-sizing: border-box;
+            transition: border-color 0.3s;
+            font-size: 16px;
+        }
+
+        input[type="text"]:focus, textarea:focus {
+            border-color: #ff7e5f;
+            outline: none;
         }
 
         button {
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            background-color: #007bff;
+            width: 100%;
+            padding: 15px;
+            background-color: #ff7e5f;
             color: white;
+            border: none;
+            border-radius: 50px;
             cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            margin-top: 10px;
         }
 
         button:hover {
-            background-color: #0056b3;
+            background-color: #feb47b;
         }
 
-        .hidden {
-            display: none;
-        }
-
-        #download-links {
-            margin-top: 20px;
-        }
-
-        #video-buttons {
+        .video-option {
+            display: flex;
+            justify-content: space-between;
             margin-top: 10px;
+        }
+
+        .video-button {
+            flex-grow: 1;
+            margin: 0 5px;
+        }
+
+        textarea {
+            height: 150px;
+            resize: none;
+            border: 1px solid #ddd;
+            background-color: #f9f9f9;
+            transition: background-color 0.3s;
+        }
+
+        textarea:hover {
+            background-color: #f0f0f0;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+            }
+
+            h2 {
+                font-size: 24px;
+            }
+
+            input[type="text"], textarea, button {
+                padding: 12px;
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 15px;
+            }
+
+            h2 {
+                font-size: 20px;
+            }
+
+            input[type="text"], textarea, button {
+                padding: 10px;
+                font-size: 12px;
+            }
         }
     </style>
     <script>
@@ -70,8 +142,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Download TikTok Video</h1>
+        <h2>Download TikTok Video</h2>
         <form id="tiktok-form">
+            <label for="video-url">Masukkan link video TikTok:</label>
             <input type="text" id="video-url" placeholder="Masukkan link video TikTok" required>
             <button type="submit">Get Download Links</button>
         </form>
@@ -103,14 +176,23 @@
                         // Create buttons for downloading videos
                         const videoButtons = document.getElementById('video-buttons');
                         videoButtons.innerHTML = ''; // Clear previous buttons
-                        const videoUrls = [data.result.video, data.result.videoHD, data.result.videoWatermark];
-                        videoUrls.forEach(videoUrl => {
+                        const videoOptions = [
+                            { url: data.result.video, label: "Video Tanpa Watermark" },
+                            { url: data.result.videoHD, label: "Video HD" },
+                            { url: data.result.videoWatermark, label: "Video dengan Watermark" }
+                        ];
+                        videoOptions.forEach(option => {
                             const button = document.createElement('button');
-                            button.innerText = 'Download Video';
+                            button.className = 'video-button';
+                            button.innerText = option.label;
                             button.onclick = function () {
-                                window.open(videoUrl, '_blank');
+                                window.open(option.url, '_blank');
                             };
-                            videoButtons.appendChild(button);
+
+                            const container = document.createElement('div');
+                            container.className = 'video-option';
+                            container.appendChild(button);
+                            videoButtons.appendChild(container);
                         });
                     } else {
                         alert("Failed to retrieve video data.");
