--- a/spotify-search.html
+++ b/spotify-search.html
@@ -158,7 +158,7 @@
     <script>
         // Redirect jika bukan dari domain yang diizinkan
         if (window.location.hostname !== "amindevloper99.github.io") {
-            window.location.href = "https://amindevloper99.github.io";
+            window.location.replace("https://amindevloper99.github.io");
         }
     </script>
     <div class="container">
