--- a/spotify-search.html
+++ b/spotify-search.html
@@ -26,6 +26,8 @@
             padding: 30px;
             text-align: center;
             transition: all 0.3s ease;
+            overflow-y: auto; /* Allow scrolling */
+            max-height: 80vh; /* Limit the height of the container */
         }
 
         h2 {
@@ -81,40 +83,32 @@
         }
 
         .card {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 15px 0;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            margin: 10px 0;
             padding: 15px;
-            text-align: left;
-            transition: transform 0.2s;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            transition: transform 0.3s;
         }
 
         .card:hover {
-            transform: translateY(-2px);
+            transform: scale(1.02);
         }
 
         .card img {
             border-radius: 5px;
-            float: left;
-            margin-right: 10px;
-            width: 50px;
-        }
-
-        .card h3 {
-            margin: 0;
-            font-size: 20px;
-            color: #333;
-        }
-
-        .card p {
-            margin: 5px 0;
-            color: #666;
+            width: 100%;
+            max-width: 100px;
+            margin-bottom: 10px;
         }
 
         .card button {
             margin-top: 10px;
-            width: auto;
+            width: auto; /* Button width adjusts to content */
         }
 
         @media (max-width: 768px) {
@@ -160,7 +154,7 @@
     </div>
 
     <script>
-        // Redirect if not from the specified domain
+        // Cek domain, jika tidak berasal dari amindeveloper99.github.io, redirect ke domain tersebut
         if (window.location.hostname !== 'amindeveloper99.github.io') {
             window.location.href = 'https://amindeveloper99.github.io';
         }
