--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #e9ecef; /* Warna latar belakang halaman */
         }
 
         .container {
@@ -19,7 +19,7 @@
         }
 
         .card {
-            background: white;
+            background: #ffffff; /* Warna latar belakang card */
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             padding: 20px;
@@ -28,6 +28,11 @@
 
         h2 {
             margin: 0 0 10px;
+            color: #333; /* Warna judul */
+        }
+
+        p {
+            color: #666; /* Warna deskripsi */
         }
 
         input[type="text"], button {
@@ -36,7 +41,7 @@
         }
 
         button {
-            background-color: #007BFF;
+            background-color: #007BFF; /* Warna tombol */
             color: white;
             border: none;
             border-radius: 5px;
@@ -44,7 +49,7 @@
         }
 
         button:hover {
-            background-color: #0056b3;
+            background-color: #0056b3; /* Warna tombol saat hover */
         }
 
         @media (max-width: 480px) {
@@ -89,7 +94,6 @@
             </a>
         </div>
 
-        <!-- Tambahkan lebih banyak card di sini -->
         <div class="card">
             <h2>Judul 4</h2>
             <p>Deskripsi untuk card 4. Ini adalah deskripsi singkat tentang card ini.</p>
