--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Table</title>
+    <title>Tools Amin Developer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,33 +71,35 @@
 <body>
     <div class="container">
         <div class="card">
-            <h2>Judul 1</h2>
-            <p>Deskripsi untuk card 1. Ini adalah deskripsi singkat tentang card ini.</p>
-            <a href="#" target="_blank">
+            <h2>GPT 4</h2>
+            <p>GPT-4 adalah model bahasa alami berbasis kecerdasan buatan yang dikembangkan oleh OpenAI. Model ini merupakan versi terbaru dari Generative Pre-trained Transformer (GPT) yang memiliki kemampuan untuk menghasilkan teks yang mirip dengan teks manusia. GPT-4 memiliki kemampuan yang lebih baik dalam pemahaman konteks dan menghasilkan teks yang lebih realistis dan informatif.</p>
+            <a href="https://amindeveloper99.github.io/gpt4.html" target="_blank">
                 <button>Visit Link</button>
             </a>
         </div>
 
         <div class="card">
-            <h2>Judul 2</h2>
-            <p>Deskripsi untuk card 2. Ini adalah deskripsi singkat tentang card ini.</p>
-            <a href="#" target="_blank">
+            <h2>GPT 4o</h2>
+            <p>GPT-4O adalah model bahasa canggih yang dirancang untuk memahami dan menghasilkan teks dengan lebih baik dibandingkan pendahulunya. Dengan kemampuan pemrosesan yang lebih tinggi, GPT-4O dapat menangkap konteks yang lebih kompleks, memberikan jawaban yang lebih akurat, dan berinteraksi dengan pengguna dengan cara yang lebih alami. 
+
+Bayangkan seperti memiliki teman yang super pintar dan selalu siap membantu! Apakah ada yang ingin kamu ketahui lebih lanjut tentang GPT-4O atau topik lainnya? Saya di sini untuk membantu! 😊</p>
+            <a href="https://amindeveloper99.github.io/gpt4o.html" target="_blank">
                 <button>Visit Link</button>
             </a>
         </div>
 
         <div class="card">
-            <h2>Judul 3</h2>
-            <p>Deskripsi untuk card 3. Ini adalah deskripsi singkat tentang card ini.</p>
-            <a href="#" target="_blank">
+            <h2>Facebook Downloader</h2>
+            <p>Facebook Downloader adalah sebuah alat atau aplikasi yang memungkinkan pengguna untuk mengunduh konten dari platform Facebook, seperti foto, video, atau bahkan album. Dengan menggunakan Facebook Downloader, kamu bisa menyimpan momen-momen spesial yang kamu temukan di feed atau di halaman temanmu, sehingga bisa diakses kapan saja, bahkan tanpa koneksi internet!  Ini sangat berguna, terutama jika ada video lucu atau gambar favorit yang ingin kamu simpan. Namun, ingat ya, penting untuk menghormati privasi dan hak cipta! Pastikan untuk hanya mengunduh konten yang diperbolehkan atau yang kamu miliki izinnya. Semoga informasi ini membantu, dan selamat mencoba! Jika ada pertanyaan lain, jangan ragu untuk bertanya! 😊</p>
+            <a href="https://amindeveloper99.github.io/facebook.html" target="_blank">
                 <button>Visit Link</button>
             </a>
         </div>
 
         <div class="card">
-            <h2>Judul 4</h2>
-            <p>Deskripsi untuk card 4. Ini adalah deskripsi singkat tentang card ini.</p>
-            <a href="#" target="_blank">
+            <h2>Instagram Downloader</h2>
+            <p>Tentu! Instagram downloader adalah alat atau aplikasi yang memungkinkan pengguna untuk menyimpan konten dari Instagram, seperti foto, video, ke perangkat mereka. Dengan menggunakan Instagram downloader, kamu bisa menyimpan momen-momen spesial dari akun yang kamu suka, bahkan tanpa harus mengambil tangkapan layar yang mungkin kurang berkualitas. Yang menyenangkan, banyak downloader yang mudah digunakan dan dapat diakses baik di perangkat mobile maupun desktop! Namun, selalu ingat untuk menghormati hak cipta dan privasi pengguna lain saat mendownload konten. Selamat berburu konten menarik di Instagram! 😊✨</p>
+            <a href="https://amindeveloper99.github.io/instagram.html" target="_blank">
                 <button>Visit Link</button>
             </a>
         </div>
