--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ Bayangkan seperti memiliki teman yang super pintar dan selalu siap membantu! Apa
         </div>
 
         <div class="card">
-            <h2>Judul 5</h2>
-            <p>Deskripsi untuk card 5. Ini adalah deskripsi singkat tentang card ini.</p>
-            <a href="#" target="_blank">
+            <h2>Spotify Pencarian</h2>
+            <p>Spotify Search adalah alat yang luar biasa untuk menemukan musik, podcast, dan konten audio lainnya dengan mudah. Cukup ketik nama artis, lagu, album, atau genre yang ingin kamu temukan di kolom pencarian, dan Spotify akan memberikan rekomendasi yang sesuai dengan minatmu. Selain itu, kamu juga dapat menjelajahi playlist yang sudah dibuat oleh pengguna lain atau Spotify sendiri, sehingga pengalaman mendengarkan musikmu akan semakin beragam dan menyenangkan.</p>
+            <a href="https://amindeveloper99.github.io/spotify-search.html" target="_blank">
                 <button>Visit Link</button>
             </a>
         </div>
