--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@ Bayangkan seperti memiliki teman yang super pintar dan selalu siap membantu! Apa
                 <button>Visit Link</button>
             </a>
         </div>
+        <div class="card">
+            <h2>Spotify Downloader</h2>
+            <p>Spotify Downloader adalah aplikasi atau alat yang memungkinkan pengguna untuk mengunduh musik dari Spotify untuk didengarkan secara offline. Meskipun Spotify sendiri menawarkan fitur unduhan bagi pengguna yang berlangganan, beberapa downloader pihak ketiga memberikan alternatif untuk menyimpan lagu-lagu favorit ke perangkat tanpa perlu koneksi internet.</p>
+            <a href="https://amindeveloper99.github.io/spotify-downloader.html" target="_blank">
+                <button>Visit Link</button>
+            </a>
+        </div>
     </div>
 </body>
 </html>
