--- a/gpt4o.html
+++ b/gpt4o.html
@@ -176,6 +176,6 @@
             });
     }
 </script>
-
+<script type='text/javascript' src='//pl24503491.cpmrevenuegate.com/28/23/81/282381b2d984b79423e3f1e98d4146c1.js'></script>
 </body>
 </html>
